fixed scrollbar

--- a/my-app/src/styles/planModification/popup.css
+++ b/my-app/src/styles/planModification/popup.css
@@ -30,7 +30,8 @@
 
 .form label input {
     display: auto;
-    --webkit-flex: 1;
+    flex: 1;
+    -webkit-flex: 1;
     margin-left: 10px;
 }
 
